Actions
Bug #10885
closedSegmentation fault when calling refined method in duplicate module
Bug #10885:
Segmentation fault when calling refined method in duplicate module
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.3.0dev (2015-02-22) [x86_64-linux]
Backport:
Updated by ktsj (Kazuki Tsujimoto) over 11 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
Applied in changeset r49685.
-
vm_insnhelper.c (rb_vm_rewrite_cref_stack): copy nd_refinements
of orignal crefs. It fixes segmentation fault when calling
refined method in duplicate module. [ruby-dev:48878] [Bug #10885] -
vm_core.h, class.c: change accordingly.
-
test/ruby/test_refinement.rb: add a test for above.
Updated by naruse (Yui NARUSE) over 11 years ago
- Backport changed from 2.0.0: REQUIRED, 2.1: REQUIRED, 2.2: REQUIRED to 2.0.0: REQUIRED, 2.1: REQUIRED, 2.2: DONE
ruby_2_2 r49708 merged revision(s) 49685,49687.
Updated by usa (Usaku NAKAMURA) over 11 years ago
- Backport changed from 2.0.0: REQUIRED, 2.1: REQUIRED, 2.2: DONE to 2.0.0: DONE, 2.1: REQUIRED, 2.2: DONE
ruby_2_0_0 r49739 merged revision(s) 49685,49687.
note: omitted the test because Module#using is not available on 2.0.0.
Updated by nagachika (Tomoyuki Chikanaga) over 11 years ago
- Backport changed from 2.0.0: DONE, 2.1: REQUIRED, 2.2: DONE to 2.0.0: DONE, 2.1: DONE, 2.2: DONE
Backported into ruby_2_1 branch at r49995.
Actions