* vm_insnhelper.c (rb_vm_rewrite_cref_stack): copy nd_refinements   of orignal crefs. It fixes segmentation fault when calling   refined method in duplicate module. [ruby-dev:48878] [Bug #10885]

* vm_core.h, class.c: change accordingly.

* test/ruby/test_refinement.rb: add a test for above.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@49685 b2dd03c8-39d4-4d8f-98ff-823fe69b080e